--- a/Frontend/src/app/shared/rich-txt-editor/rich-txt-editor.component.html
+++ b/Frontend/src/app/shared/rich-txt-editor/rich-txt-editor.component.html
@@ -1,8 +1,11 @@
-<form [formGroup]="form" (ngSubmit)="submitContent()">
-    <label>Write your question/answer</label>
-    <ngx-editor [editor]="editor" formControlName="content"></ngx-editor>
-  
-    <button type="submit">Submit</button>
-  </form>
-  
-  
+
+
+
+<!-- Description Rich Text with Toolbar  -->
+<label for="description">Description</label>
+<ngx-editor-menu [editor]="editor"></ngx-editor-menu> 
+<ngx-editor
+  [editor]="editor"
+  [formControl]="description"
+  placeholder="Write your question or answer here..."
+></ngx-editor>
