Created Home page & Shared Module

--- a/Frontend/src/app/questions/view-question/view-question.component.html
+++ b/Frontend/src/app/questions/view-question/view-question.component.html
@@ -1,1 +1,4 @@
-<p>view-question works!</p>
+<div class="view-container">
+  <h2>Viewing Question ID: {{ questionId }}</h2>
+  <p>This is where question details and answers will be displayed.</p>
+</div>
