--- a/Frontend/src/app/shared/footer/footer.component.html
+++ b/Frontend/src/app/shared/footer/footer.component.html
@@ -1,1 +1,11 @@
-<p>footer works!</p>
+<footer class="footer">
+  <div class="footer-left">
+    © 2025 StackIt. All rights reserved.
+  </div>
+  <div class="footer-right">
+    <a routerLink="/about">About</a>
+    <a routerLink="/privacy">Privacy</a>
+    <a routerLink="/terms">Terms</a>
+  </div>
+</footer>
+
