--- a/Frontend/src/app/questions/ask-question/ask-question.component.html
+++ b/Frontend/src/app/questions/ask-question/ask-question.component.html
@@ -1,6 +1,4 @@
-
-
-
+<app-navbar></app-navbar>
 <div class="ask-wrapper">
     <form [formGroup]="form" (ngSubmit)="onSubmit()" class="ask-form">
       <h2>Ask a Question</h2>
